--- a/src/global.css
+++ b/src/global.css
@@ -18,3 +18,26 @@ body::-webkit-scrollbar-thumb {
     background-color: red;
     border-radius: 10px
 }
+
+@keyframes show{
+    from {
+        opacity: 0;
+        scale: 25%;
+    }
+    to {
+        opacity: 1;
+        scale: 100%;
+    }
+}
+
+.img{
+    view-timeline-name: --image;
+    view-timeline-axis: block;
+
+    animation-timeline: --image;
+    animation-name: show;
+
+    animation-range: entry 25% cover 50%; 
+    animation-fill-mode: both;
+}
+
